# ROS2

./: .gitignore  .tags  README.md  colcon.pkg
.cmake-vscode/my_cpp_pkg/Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
.cmake-vscode/my_cpp_pkg/Debug/Testing/: TAG
.cmake-vscode/my_cpp_pkg/Debug/Testing/20260413-0513/: Test.xml
.cmake-vscode/my_cpp_pkg/Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
graph/: graph_dynamic_trace.json  wait_for_graph_static.json
graph/experiments/20260413_195449_ros2_examples/: graph_static.json  llm_project_spec.json  wait_for_graph_static.json
graph/experiments/20260413_195449_ros2_rclcpp/: graph_dynamic_trace.json  graph_static.json  llm_project_spec.json  wait_for_graph_static.json
graph/experiments/20260413_195449_ros2_rclpy/: graph_dynamic_trace.json  graph_static.json  llm_project_spec.json  wait_for_graph_static.json
graph/experiments/20260413_212051_three_classes_static_ros2_rclcpp/: graph_dynamic_trace.json  graph_static.json  llm_project_spec.json  wait_for_graph_static.json
graph/experiments/20260413_212051_three_classes_static_ros2_rclcpp/generated_src/generated_ros2_pkg/launch/: generated_system.launch.py
graph/experiments/20260413_212051_three_classes_static_ros2_rclcpp/generated_src/generated_ros2_pkg/src/: clock_publisher.cpp  clock_thread_testing_node.cpp  my_node.cpp  sim_clock_publisher_node.cpp  subscription_class_node_inheritance.cpp  test_component_bar.cpp  test_component_foo.cpp  timer_node.cpp
graph/experiments/20260413_212051_three_classes_static_ros2_rclpy/: graph_dynamic_trace.json  graph_static.json  llm_project_spec.json  wait_for_graph_static.json
graph/experiments/20260413_212051_three_classes_static_ros2_rclpy/generated_src/generated_ros2_pkg/launch/: generated_system.launch.py
graph/experiments/20260413_212051_three_classes_static_ros2_rclpy/generated_src/generated_ros2_pkg/src/: clock_node.cpp  ctx_mgr_test.cpp  example_node.cpp  foo.cpp  my_node.cpp  mynode.cpp  node_name.cpp  pub_node.cpp  publisher_node.cpp  test_action_client_node.cpp  test_destroy_client_asap.cpp  test_destroy_publisher_asap.cpp  test_destroy_service_asap.cpp  test_destroy_subscription_asap.cpp  test_destroy_timer_asap.cpp  test_destruction_order_node_1.cpp  test_destruction_order_node_2.cpp  test_destruction_order_node_3.cpp  test_lifecycle_node_init_1.cpp  test_lifecycle_node_init_2.cpp  test_lifecycle_node_init_3.cpp  test_lifecycle_publisher.cpp  test_lifecycle_services_client.cpp  test_node.cpp  test_node1.cpp  (+26 more)
graph/experiments/20260413_212051_three_classes_static_ros_navigation2/: graph_dynamic_trace.json  graph_static.json  llm_project_spec.json  wait_for_graph_static.json
install/: local_setup.sh  setup.sh
install/generated_ros2_pkg/lib/generated_ros2_pkg/: action_client  action_client_node  action_concurrency_node  action_server  action_server_node  add_two_ints_client  add_two_ints_server  amcl  amcl_pose  backup__action_cancel_goal  backup__action_feedback  backup__action_result  backup__action_status  behavior_server  behavior_tree_engine  behavior_tree_log  bond_manager  bt_navigator  callback_group  callback_group_executor  callback_group_node  client_node  cmd_vel  component_container  compute_path_through_poses__action_cancel_goal  compute_path_through_poses__action_feedback  compute_path_through_poses__action_result  compute_path_through_poses__action_status  compute_path_to_pose__action_cancel_goal  compute_path_to_pose__action_feedback  compute_path_to_pose__action_result  compute_path_to_pose__action_status  controller  controller_node  controller_server  costmap_2d  dwb_controller  executor  executor_node  executor_test_node  (+172 more)
install/generated_ros2_pkg/share/generated_ros2_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/generated_ros2_pkg/share/generated_ros2_pkg/cmake/: generated_ros2_pkgConfig.cmake
install/my_cpp_pkg/lib/my_cpp_pkg/: listener  talker
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
install/nav2_race_cpp/lib/nav2_race_cpp/: behavior_server_mini  collision_monitor_mini  global_costmap_mini  lifecycle_manager_navigation_mini  local_costmap_mini  map_server_mini  planner_server_mini  smoother_server_mini  velocity_smoother_mini  waypoint_follower_mini
install/nav2_race_cpp/share/nav2_race_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav2_race_cpp/share/nav2_race_cpp/cmake/: nav2_race_cppConfig.cmake
install/nav2_race_cpp/share/nav2_race_cpp/launch/: nav2_race_cpp.launch.py
install/nav2_race_min/lib/nav2_race_min/: mini_navigator_server  mini_race_stress
install/nav2_race_min/share/nav2_race_min/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_race_min/share/nav2_race_min/launch/: race_min.launch.py
log/: latest_build
src/generated_ros2_pkg/: CMakeLists.txt
src/generated_ros2_pkg/launch/: generated_system.launch.py
src/generated_ros2_pkg/src/: minimal_publisher.cpp  minimal_subscriber.cpp  service_client.cpp  service_server.cpp  timer_node.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: 1.py  listener.cpp  subjects_info_preHC.csv  talker.cpp
src/nav2_race_cpp/: CMakeLists.txt  README.md
src/nav2_race_cpp/src/: behavior_server_mini.cpp  bt_navigator_mini.cpp  collision_monitor_mini.cpp  controller_server_mini.cpp  global_costmap_mini.cpp  lifecycle_manager_navigation_mini.cpp  local_costmap_mini.cpp  map_server_mini.cpp  planner_server_mini.cpp  smoother_server_mini.cpp  velocity_smoother_mini.cpp  waypoint_follower_mini.cpp
src/nav2_race_min/: CHANGELOG.md  README.md  package.xml  setup.cfg  setup.py
tools/: export_graphs_to_graph_dir.sh  llm_ros2_auto_pipeline.py  nav2_static_bringup.launch.py  ros2_graph_dynamic_locate.py  ros2_graph_dynamic_trace.py  ros2_graph_static_dump.py  ros2_wait_for_graph_static.py  ros2_wait_for_semantic_merge.py
(+63 files in other folders)
