<?xml version="1.0"?>
<package format="3">
  <name>generated_ros2_pkg</name>
  <version>0.1.0</version>
  <description>Generated ROS2 C++ package from LLM spec</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
